--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -27,7 +27,7 @@ jobs:
       run: go test -v ./...
 
     - name: Build Windows
-      run: GOOS=windows GOARCH=amd64 go build -v ./... -o timefiller-win64
+      run: GOOS=windows GOARCH=amd64 go build -v -o timefiller-win64
       
     - name: Build Mac
       run: GOOS=mac GOARCH=arm64 go build -v ./... -o timefiller-macm1
